--- a/desafio_mini_projeto/pubspec.yaml
+++ b/desafio_mini_projeto/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   flutter_mobx: ^2.2.1+1
   slidy: ^3.2.2+2
   sqflite: ^2.3.3+1
+  web_socket_channel: ^2.1.0 
+  video_player: ^2.3.0   
+  socket_io_client: ^3.0.0-beta.2
 
 dev_dependencies:
   flutter_test:
